Fix light mode  dark mode headers  in nav,  update tailwind config,  useMemo on app and vantaeffects

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@
 	--text-dark: #1a1a1a;
 	--text-light: #f2f2f2;
 	--pad: 30px;
+	--underline-color: #1a1a1a;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -69,6 +70,7 @@ body.dark {
 	transition-property: background-color;
 	transition-duration: 0.9s;
 	transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1);
+	--underline-color: #f2f2f2;
 }
 
 /* old root 
@@ -256,7 +258,7 @@ body.dark {
 	height: 2px;
 	bottom: 4px;
 	left: 0;
-	background-color: var(--bg-dark);
+	background-color: var(--underline-color);
 	transform-origin: bottom right;
 	transition: transform 0.25s ease-out;
 }
@@ -266,11 +268,16 @@ body.dark {
 	transform-origin: bottom left;
 }
 
-.active {
+/* body .text-decoration-dark.active {
+	text-decoration: underline;
+	text-decoration-color: var(--text-dark);
+	text-underline-offset: 5px;
+}
+body.dark .text-decoration-light.active {
 	text-decoration: underline;
 	text-decoration-color: var(--text-light);
 	text-underline-offset: 5px;
-}
+} */
 
 .header_icon:hover {
 	/* background-color: var(--text-dark); */
@@ -368,10 +375,4 @@ input:focus {
 
 .projectCard {
 	background-color: #fcf9f9;
-}
-
-@media (prefers-color-scheme: dark) {
-	.hover-underline-animation::after {
-		background-color: var(--bg-light);
-	}
 }
